--- a/EjsFiles/index.ejs
+++ b/EjsFiles/index.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="stylesheet" href="/styles/main.css">
   <%- include('./partials/head.ejs') %>
 <body class="home">
   <%- include('./partials/nav.ejs') %>
