--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,14 @@
 body {
   padding-top: 80px;
-  min-height: calc(100vh - 90px);
-  font-family: "Montserrat", sans-serif;
+  min-height: 100vh;
   font-size: 20px;
-  background: linear-gradient(to bottom, #00d2ff, #928dab);
-  color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+  background-image: url(https://wallpapercave.com/wp/wp11735742.jpg);
+  background-position: static;
+  background-repeat: no-repeat;
+  background-size: cover;
+ 
+  /* color: #fff; */
 }
 
 h1 {
@@ -48,19 +52,37 @@ a {
 }
 
 article {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-image: url(https://sun9-44.userapi.com/impf/NWjGJdzUw0rJPBtyx5vIX2GV1QRXfngHAaTxZg/vTPcnbsBcP4.jpg?size=1920x768&quality=95&crop=155,0,1327,530&sign=38d79dc732b44c3aa144edf639bc3e81&type=cover_group);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   padding: 10px 20px;
   border-radius: 3px;
   margin-bottom: 10px;
+  color: white;
+  /* filter: blur(5px);
+  z-index: -1; */
 }
+
+/* .baclground {
+  background-image: url(https://sun9-44.userapi.com/impf/NWjGJdzUw0rJPBtyx5vIX2GV1QRXfngHAaTxZg/vTPcnbsBcP4.jpg?size=1920x768&quality=95&crop=155,0,1327,530&sign=38d79dc732b44c3aa144edf639bc3e81&type=cover_group);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  filter: blur(5px);
+
+} */
 
 .info {
   display: flex;
   justify-content: space-between;
 }
 
-h2 a {
-  color: aqua;
+h2 {
+  color: rgb(255, 255, 255);
+  text-shadow: 1.41px 1.41px black, 2px 0 black, 1.41px -1.41px black,
+    0 -2px black, -1.41px -1.41px black, -2px 0 black,
+   -1.41px 1.41px black, 0 2px black;
 }
 
 form {
@@ -125,10 +147,11 @@ textarea {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  font-family: "Montserrat", sans-serif;
   font-size: 20px;
-  background: linear-gradient(to bottom, #00d2ff, #928dab);
-  color: #fff;
+  background-image: url(https://wallpapercave.com/wp/wp11735742.jpg);
+  background-position: static;
+  background-repeat: no-repeat;
+  background-size: cover;
   padding-top: 0;
 }
 
@@ -146,4 +169,52 @@ textarea {
   text-transform: uppercase;
   font-size: 160px;
   margin-bottom: 20px;
+}
+
+
+/* тут пока все тестирутеся */
+
+.post-commentary{
+  text-align: center;
+}
+
+.span-post {
+  font-size: 50px;
+  padding-top: 40px;
+}
+
+.posts-text {
+  text-shadow: 1.41px 1.41px black, 2px 0 black, 1.41px -1.41px black,
+    0 -2px black, -1.41px -1.41px black, -2px 0 black,
+   -1.41px 1.41px black, 0 2px black;
+}
+
+.left {
+  padding-left: 350px;
+}
+
+.right {
+  padding-right: 350px;
+}
+
+.match{
+  color: black;
+}
+
+.div_match-post {
+  text-align: center;
+  border-radius: 10px;
+  padding: 25px;
+  background-color: white;
+  width: 150px;
+  height: 50px;
+}
+
+.head-posts {
+  display: flex;
+  justify-content: space-between;
+}
+
+label {
+  color: white;
 }
