--- a/EjsFiles/partials/nav.ejs
+++ b/EjsFiles/partials/nav.ejs
@@ -1,8 +1,7 @@
 <nav>
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/posts">Posts</a></li>
-      <li><a href="/add-post">New Post</a></li>
-      <li><a href="/contacts">Contacts</a></li>
+      <li><a href="/">Главная</a></li>
+      <li><a href="/posts">Матчи</a></li>
+      <li><a href="/add-post">Добавить Матч</a></li>
     </ul>
 </nav>
