--- a/EjsFiles/post.ejs
+++ b/EjsFiles/post.ejs
@@ -3,13 +3,22 @@
   <%- include('./partials/head.ejs') %>
 <body>
   <%- include('./partials/nav.ejs') %>
-  <article>
-    <div class="info">
-      <span><%= post.createdAt.toLocaleDateString() || 'No date' %></span>
-      <span><%= post.author %></span>
-    </div>
-    <h1><%= post.title %></h1>
-    <p><%= post.text %></p>
-  </article>
+    <article>
+        <div class="info">
+          <span class="span-post left"><%= post.first_team %></span>
+          <div class="div_match-post">
+            <span class="span-post match"><%= post.match %></span>
+          </div>
+          <span class="span-post right"><%= post.second_team %></span>
+        </div>
+        <p class="post-commentary"><%= post.text %></p>
+        <span><%= post.createdAt.toLocaleDateString() || 'No date' %></span>
+        <a href="/edit/<%= post.id %>" class="btn-edit">
+          <i class="fas fa-edit"></i>
+        </a>
+        <button class="btn-delete" data-id="<%= post.id %>">
+          <i class="fas fa-trash-alt" data-id="<%= post.id %>"></i>
+        </button>
+    </article>
 </body>
 </html>
