--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,13 @@
 body {
   padding-top: 80px;
-  min-height: calc(100vh - 90px);
+  min-height: 100vh;
   font-size: 20px;
-  background-image: url(https://images4.alphacoders.com/127/thumb-1920-1277335.png);
+  font-family: Arial, Helvetica, sans-serif;
+  background-image: url(https://wallpapercave.com/wp/wp11735742.jpg);
   background-position: static;
   background-repeat: no-repeat;
+  background-size: cover;
+ 
   /* color: #fff; */
 }
 
@@ -53,20 +56,33 @@ article {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-color: rgba(0, 0, 0, 0.4);
   padding: 10px 20px;
   border-radius: 3px;
   margin-bottom: 10px;
   color: white;
+  /* filter: blur(5px);
+  z-index: -1; */
 }
+
+/* .baclground {
+  background-image: url(https://sun9-44.userapi.com/impf/NWjGJdzUw0rJPBtyx5vIX2GV1QRXfngHAaTxZg/vTPcnbsBcP4.jpg?size=1920x768&quality=95&crop=155,0,1327,530&sign=38d79dc732b44c3aa144edf639bc3e81&type=cover_group);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  filter: blur(5px);
+
+} */
 
 .info {
   display: flex;
   justify-content: space-between;
 }
 
-h2 a {
-  color: aqua;
+h2 {
+  color: rgb(255, 255, 255);
+  text-shadow: 1.41px 1.41px black, 2px 0 black, 1.41px -1.41px black,
+    0 -2px black, -1.41px -1.41px black, -2px 0 black,
+   -1.41px 1.41px black, 0 2px black;
 }
 
 form {
@@ -135,6 +151,7 @@ textarea {
   background-image: url(https://wallpapercave.com/wp/wp11735742.jpg);
   background-position: static;
   background-repeat: no-repeat;
+  background-size: cover;
   padding-top: 0;
 }
 
@@ -166,6 +183,12 @@ textarea {
   padding-top: 40px;
 }
 
+.posts-text {
+  text-shadow: 1.41px 1.41px black, 2px 0 black, 1.41px -1.41px black,
+    0 -2px black, -1.41px -1.41px black, -2px 0 black,
+   -1.41px 1.41px black, 0 2px black;
+}
+
 .left {
   padding-left: 350px;
 }
@@ -179,7 +202,22 @@ textarea {
 }
 
 .div_match-post {
+  text-align: center;
   border-radius: 10px;
   padding: 25px;
   background-color: white;
+  width: 150px;
+  height: 50px;
+}
+
+.head-posts {
+  display: flex;
+  justify-content: space-between;
+}
+
+label {
+  color: white;
+  text-shadow: 1.41px 1.41px black, 2px 0 black, 1.41px -1.41px black,
+    0 -2px black, -1.41px -1.41px black, -2px 0 black,
+   -1.41px 1.41px black, 0 2px black;
 }
